--- a/care-server/src/main/resources/application.yml
+++ b/care-server/src/main/resources/application.yml
@@ -37,15 +37,20 @@ spring:
 mybatis:
   #mapper配置文件
   mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.care.entity
+  type-aliases-package: com.carepaws.entity
   configuration:
     #开启驼峰命名
     map-underscore-to-camel-case: true
 
+knife4j:
+  enable: true
+  setting:
+    language: zh_cn
+
 logging:
   level:
     com:
-      care:
+      carepaws:
         mapper: debug
         service: info
         controller: info
