--- a/care-pojo/pom.xml
+++ b/care-pojo/pom.xml
@@ -23,16 +23,10 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.9.2</version>
         </dependency>
-        <!-- Swagger注解依赖：用于API文档注解 -->
+        <!-- Knife4j Spring Boot启动器依赖：用于集成Swagger API文档生成工具，提供更友好的API文档界面 -->
         <dependency>
-            <groupId>io.swagger.core.v3</groupId>
-            <artifactId>swagger-annotations</artifactId>
-            <version>2.2.9</version>
-        </dependency>
-        <!-- Spring Boot Validation依赖：用于@DateTimeFormat等注解 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
 
